--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -11,6 +11,7 @@
     "com.unity.ide.rider": "3.0.7",
     "com.unity.ide.visualstudio": "2.0.8",
     "com.unity.ide.vscode": "1.2.3",
+    "com.unity.inputsystem": "1.0.2",
     "com.unity.netcode.gameobjects": "1.0.0-pre.3",
     "com.unity.test-framework": "1.1.24",
     "com.unity.textmeshpro": "3.0.6",
